ajout des icones

--- a/assets/style.css
+++ b/assets/style.css
@@ -61,3 +61,11 @@ body{
     background-color: #3F2E56;
     margin-top: 0px;
 }
+
+.langage-programmation img{
+    width: 50px;
+
+}
+h1 img{
+    width: 30px;
+}
