justify-content: center; de chaque div dans container

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ body{
 
 .container{
     background-color: #3F2E56;
-    margin-top: 0px;
+    margin: 0px;
 }
 
 .langage-programmation img{
@@ -68,4 +68,22 @@ body{
 }
 h1 img{
     width: 30px;
+}
+.experience{
+    display: flex;
+    background-color: black;
+    justify-content: center;
+    
+}
+.competence{
+    display: flex;
+    justify-content: center;
+}
+.formation{
+    display: flex;
+    justify-content: center;
+}
+.centre-interet{
+    display: flex;
+    justify-content: center;
 }
