--- a/assets/style.css
+++ b/assets/style.css
@@ -62,10 +62,6 @@ body{
     margin: 0px;
 }
 
-.langage-programmation img{
-    width: 50px;
-
-}
 h1 img{
     width: 30px;
 }
@@ -97,8 +93,24 @@ h1 img{
 }
 .competence{
     display: block;
+    background-color: burlywood;
     justify-content: center;
-    background-color: aqua;
+    padding: 50px;
+}
+.langage-programmation img{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    padding: 20px;
+
+}
+.langue{
+    display: flex;
+    justify-content: center;
+}
+.langue p{
+    padding: 20px;
+    margin-right: 10px;
 }
 .formation{
     display: flex;
