--- a/assets/style.css
+++ b/assets/style.css
@@ -15,9 +15,6 @@ body{
     display: flex;
     margin-bottom: 0px;
     background-color: #453F78;
-    box-shadow: inset 0 0 1em #FAF2A1, 0 0 2em white;
-
-
 }
 
 .information{
@@ -65,39 +62,57 @@ body{
 h1 img{
     width: 30px;
 }
+.container h1{
+    padding-top: 10px;
+}
 /* SECTION EXPERIENCE*/
 .experience{
     display: flex;
-    background-color: black;
     justify-content: center;
-    padding: 50px;
-    
+    padding: 20px;   
 }
 .experience1{
     padding: 20px;
-    border: 1px chartreuse solid;
     margin-right: 10px;
     width: 300px;
+    box-shadow: 0 0 1em 0 black;
+    transition: transform .8s;
+}
+.experience1:hover{
+    color: #3F2E56;
+    background-color: white;
+    transform: scale(1.2);
 }
 .experience2{
     padding: 20px;
-    border: 1px chartreuse solid;
+    box-shadow: 0 0 1em 0 black;
     margin-right: 10px;
     width: 300px;
+    transition: transform .8s;
+}
+.experience2:hover{
+    color: #3F2E56;
+    background-color: white;
+    transform: scale(1.2);
 }
 .experience3{
     padding: 20px;
-    border: 1px chartreuse solid;
+    box-shadow: 0 0 1em 0 black;
     margin-right: 10px;
     width: 300px;
+    transition: transform .8s;
+}
+.experience3:hover{
+    color: #3F2E56;
+    background-color: white;
+    transform: scale(1.2);
 }
 
 /* SECTION COMPETENCE*/
 .competence{
     display: block;
-    background-color: burlywood;
     justify-content: center;
-    padding: 50px;
+    padding: 20px;
 }
 .langage-programmation img{
     width: 50px;
@@ -118,9 +133,8 @@ h1 img{
 /* SECTION FORMATION*/
 .formation{
     display: flex;
-    background-color: black;
     justify-content: center;
-    padding: 50px;
+    padding: 20px;
 }
 .formation1{
     padding: 20px;
@@ -144,9 +158,8 @@ h1 img{
 /* SECTION CENTRE D'INTERET*/
 .centre-interet{
     display: flex;
-    background-color: black;
     justify-content: center;
-    padding: 50px;
+    padding: 20px;
 }
 
 .centre-interet p{
