--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,7 @@ body{
 
 .photo img{
     width: 300px;
+    border-radius: 50%;
 }
 
 .bouton{
@@ -119,6 +120,7 @@ h1 img{
     height: 50px;
     margin-right: 10px;
     padding: 20px;
+    box-shadow: 0 0 1em 0 black;
 
 }
 .langue{
@@ -181,12 +183,61 @@ h1 img{
 }
 
 .centre-interet p{
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     margin-right: 10px;
-    border: 1px chartreuse solid;
 }
 ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+  }
+
+  /*RESPONSIVE*/
+  @media only screen and (max-width: 600px) {
+    .header{
+        display: block;
+        font-size: small;
+        justify-content: left;
+        margin-left: 0;
+    }
+    .information{
+        width: 300px;
+        display: block;
+        justify-content: center;
+        margin-top: 0px;
+        padding-top: 10px;
+    }
+    
+    .icone img{
+        width: 25px;
+    }
+    
+    .photo{
+        width: 200px;
+        margin-top: auto;
+        margin-left: 100px;
+    }
+    
+    .photo img{
+        width: 200px;
+        border-radius: 50%;
+    }
+    
+    .bouton{
+        width: 120px;
+        margin: auto;
+        padding-top:10px ;
+    }
+    .bouton h3{
+        border: 2px black solid;
+        border-radius: 25px;
+        transition: transform .8s;
+        
+    }
+    .container{
+        display: block;
+        font-size: small;
+        justify-content: left;
+        margin-left: 0;
+    }
   }
