Test mode dark light

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,9 @@ body{
     margin-bottom: 0px;
     background-color: #453F78;
 }
-
+.light-mode .header{
+    background-color: aliceblue;
+}
 .information{
     width: 600px;
     display: block;
@@ -59,6 +61,10 @@ body{
 .container{
     background-color: #3F2E56;
     margin: 0px;
+}
+.light-mode .container{
+    background-color: #CC3363;
+    color:white;
 }
 
 h1 img{
