Modification bouton mode light mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -207,6 +207,9 @@ ul {
         justify-content: left;
         margin-left: 0;
     }
+    .bouton-light-dark{
+        display: flex;
+    }
     .information{
         width: 300px;
         display: block;
